JVM: Do not use biased locking
Biased locking is not appropriate for very concurrent applications
like Midolman.

By turning on the +PrintSafepointStatistics option we can see frequent
BulkRevokeBias operations, which require a global safepoint to be
reached and thus represent a pause.

Change-Id: I88528e9ed8928bef426a2225f2f5429bed346678
Signed-off-by: Duarte Nunes <duarte@midokura.com>